--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Persional Website</title>
+    <link rel="icon" type="image/png" href="images/logom.png">
     <!-- fontawesome css -->
     <link rel="stylesheet" href="css/all.min.css">
     <!-- Bootstrap CSS -->
