--- a/qualification.html
+++ b/qualification.html
@@ -4,7 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Persional Website</title>
+        <title>solveIT</title>
+         <link rel="icon" type="image/png" href="images/logom.png">
         <!-- fontawesome css -->
         <link rel="stylesheet" href="css/all.min.css">
         <!-- Bootstrap CSS -->
