--- a/qualification.html
+++ b/qualification.html
@@ -16,7 +16,7 @@
     <body>
         <div class="com_menu">
             
-            <nav class="navbar navbar-expand-lg ">
+            <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container">
                     <a class="navbar-brand" href="#"><img src="images/logo-2.png" alt="logo" class="img-fluid"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
