--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>solveIT</title>
     <link rel="icon" type="image/png" href="images/logom.png">
     <!-- fontawesome css -->
